<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/map_selector"
        android:title="@string/map" />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/chat_selector"
        android:title="@string/chat" />

    <item
        android:id="@+id/cameraFragment"
        android:icon="@drawable/camera_selector"
        android:title="@string/camera" />

    <item
        android:id="@+id/storiesFragment"
        android:icon="@drawable/stories_selector"
        android:title="@string/stories" />

    <item
        android:id="@+id/spotLightFragment"
        android:icon="@drawable/spotlight_selector"
        android:title="@string/spotlight" />

</menu>