<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.VerifyActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dp_20"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_confirmation_code"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_22" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/confirm"
            android:textAlignment="center" />

        <com.chaos.view.PinView
            android:id="@+id/otp"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:cursorVisible="true"
            android:inputType="number"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemRadius="@dimen/dp_5"
            app:lineColor="@color/blue" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dp_10"
        android:paddingStart="@dimen/dp_35"
        android:paddingEnd="@dimen/dp_35"
        android:text="@string/verify_otp"
        app:backgroundTint="@color/blue"
        app:cornerRadius="@dimen/dp_100" />
</RelativeLayout>