<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.StoriesFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="@dimen/dp_0">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5">

            <RelativeLayout
                android:id="@+id/imgProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <ImageView
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerInParent="true"
                    android:alpha="0.2"
                    android:src="@drawable/circle_bg_dark"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_person"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imgProfile">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/dp_20"
                    android:alpha="0.2"
                    android:src="@drawable/circle_bg_dark"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_search_black"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/stories"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_22"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <RelativeLayout
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_centerInParent="true"
                    android:alpha="0.2"
                    android:src="@drawable/circle_bg_dark"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_more_black"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/more">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/dp_20"
                    android:alpha="0.2"
                    android:src="@drawable/circle_bg_dark"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/friends"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friends"
        android:layout_centerHorizontal="true"
        android:text="@string/friends_stories_will_appear_here"
        android:textSize="@dimen/sp_16" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:backgroundTint="@color/pink"
        android:text="@string/add_friends"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_18"
        app:cornerRadius="@dimen/dp_5" />

    <TextView
        android:id="@+id/discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addFriends"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/discover"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/discover">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dp_2"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />
    </RelativeLayout>
</RelativeLayout>